--- a/WebContent/main_admin/main_admin.css
+++ b/WebContent/main_admin/main_admin.css
@@ -7,7 +7,7 @@ body {
 
 .Option h1 {
     text-align: center;
-    color: #000000;
+    color: #ffffff;
     font-size: 18px;
     text-transform: uppercase;
     margin-top: 0;
@@ -36,6 +36,51 @@ body {
 }
 
 .Display {
+	color: #fff;
 	margin-top:3%;
-    background-color: lightblue;
+    background-color: #808080;
+}
+
+.Display .Add {
+	padding-top:3%;
+	padding-bottom:3%;
+    text-align: center;
+}
+
+
+.Display .Add select{
+	 color:#fff;
+	 margin-left:2%;
+	 margin-right:2%;
+	 background-color:#7c8c7d;
+	 width: 8%;
+	 outline: none;
+	 
+}
+
+.Display .Add Button{
+	width: 8%;
+    background: #7c8c7d;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 1px solid #7c8c7d;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-family: Montserrat;
+    outline: none;
+    cursor: pointer;
+}
+
+.Display .Add .Userform{
+	    font-family: Montserrat;
+	    text-align: center;
+	
+	
+	
+	
+	
+	
+	
+	
 }
