-It's a boy . Login/out done.

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -1,5 +1,5 @@
 body {
-  margin:0px 0px 0px 0px;
+  margin: 0;
   background: url('http://www.amazingwallpaperz.com/wp-content/uploads/Classic-Car-High-Quality-Wallpapers.jpg') no-repeat fixed center center;
   background-size: cover;
   font-family: Montserrat;
