--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -1,15 +1,23 @@
 body {
-  margin: 0;
+  margin: 0px;
   background: url('http://www.amazingwallpaperz.com/wp-content/uploads/Classic-Car-High-Quality-Wallpapers.jpg') no-repeat fixed center center;
   background-size: cover;
   font-family: Montserrat;
 }
 
 .Services{
-	background-color:#c0c0c0;
-	padding:10% 10% 10% 10%;
+	text-align: center;
+    font-size:18px;
+    padding: 20px;
+    background: #655fe8;
+    border-radius: 5px;
+    border: 5px solid #b5b2a0;
+    margin: 0 auto;
+    color:black;
+	
+	padding:1% 4.2% 2% 4.3%;
 	position: absolute;
-    top: 20%;
+    top: 21%;
     left: 30%;
     margin-top: -50px;
     margin-left: -50px;
@@ -22,11 +30,11 @@ body {
 	margin-right:1%;
     width: 100px;
     height: 40px;
-    background: #7c8c7d;
+    background: #b5b2a0;
     box-sizing: border-box;
     border-radius: 5px;
     border: 1px solid #7c8c7d;
-    color: #fff;
+	color:black;
     font-weight: bold;
     text-transform: uppercase;
     font-size: 12px;
