--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -26,9 +26,9 @@ body {
 }
 
 .Services button{
-	margin-top:3%;
+	margin-bottom:3%;
 	margin-right:1%;
-    width: 100px;
+    width: 150px;
     height: 40px;
     background: #b5b2a0;
     box-sizing: border-box;
