--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -26,7 +26,8 @@ body {
 }
 
 .Services button{
-	margin-bottom:3%;
+	margin-bottom:1.5%;
+	margin-top:1.5%;
 	margin-right:1%;
     width: 150px;
     height: 40px;
